Fixed issue with saving causing game to improperly reset